<resources>
    <string name="app_name">SCC Educational management system</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="login">login</string>
    <string name="unable_to_connect_to_network_please_check_settings">Unable to connect to network, please check settings</string>
    <string name="the_user_name_or_password_can_not_be_empty">The user name or password can not be empty</string>
    <string name="loading">loading...</string>
    <string name="invalid_username">username is not exist！</string>
    <string name="invalid_password">password is error！</string>
    <string name="student">student</string>
    <string name="course_point_of_praise">Course Praise</string>
    <string name="teacher_point_of_praise">Teacher Praise</string>
    <string name="school_notice">School Notice</string>
    <string name="hello">Hello!</string>
    <string name="login_educational_administration_system">登录教务管理系统</string>

    <string name="btn_list_view">ListView demo</string>

    <string name="header_hint_refresh_normal">Pull to refresh</string>
    <string name="header_hint_refresh_ready">Release to refresh</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>

</resources>
